delete comment in timeline

--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -419,7 +419,7 @@
                                                     <span class="glyphicon glyphicon-search"></span> Details
                                                 </div>
                                             </a>
-                                            <a class="list-group-footer-button" type="button" href="">
+                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:delete_comment_timeline' pk=elem.pk %}">
                                                 <div class="col-sm-6">
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </div>
