--- a/basics/templates/basics/information_update.html
+++ b/basics/templates/basics/information_update.html
@@ -10,7 +10,7 @@
 			<div class="modal-body">
 				<form class="form" role="form" method="post" accept-charset="UTF-8">
 				  {% csrf_token %}
-          <p class="text-center">{{information.text}}<\p>
+          <p class="text-center">{{information.text}}</p>
     			<div class="form-group">
 					    <input type="additional text" class="form-control input-lg" placeholder= "headline" value="{{need.headline}}" name="text"  >
 					</div>
