--- a/administration/templates/administration/users.html
+++ b/administration/templates/administration/users.html
@@ -98,6 +98,7 @@
                     {% endif %}
                     {% if users %}
                         {% for user in users %}
+                            {% if user.email %}
 
                                 <div class="list-group-item" id="standard-list-group-item-div">
                                     <div class="row">
@@ -117,6 +118,7 @@
                                     </div>
                                 </div>
 
+                            {% endif %}
                         {% endfor %}
                     {% endif %}
                 </div>
